# shclap

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  rules
docs/: cli-reference.md  configuration.md  environment-variables.md  examples.md  schema-v2.md  schema.md
man/: shclap.1
src/: config.rs  help.rs  lib.rs  main.rs  output.rs  parser.rs
tests/: integration.sh
