[package]
name = "shclap"
version = "0.1.0"
edition = "2021"
description = "Clap-style argument parsing for shell scripts"
authors = ["yanctab"]
license = "Apache-2.0"
repository = "https://github.com/yanctab/shclap"
keywords = ["cli", "shell", "argument-parsing", "bash"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
tempfile = "=3.10.0"
anyhow = "=1.0.79"
thiserror = "=1.0.56"

[profile.release]
strip = true
lto = true
codegen-units = 1
