[package]
name = "shclap"
version = "0.2.0"
edition = "2021"
description = "Clap-style argument parsing for shell scripts"
authors = ["yanctab"]
license = "Apache-2.0"
repository = "https://github.com/yanctab/shclap"
homepage = "https://github.com/yanctab/shclap"
readme = "README.md"
keywords = ["cli", "shell", "argument-parsing", "bash"]
categories = ["command-line-utilities"]
exclude = [".github/", "debian/", "tests/", "BACKLOG.md", "CLAUDE.md"]

[dependencies]
clap = { version = "=4.4.18", features = ["derive", "string", "env"] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = "=1.0.113"
tempfile = "=3.10.0"
anyhow = "=1.0.79"
thiserror = "=1.0.56"

[profile.release]
strip = true
lto = true
codegen-units = 1

[package.metadata.deb]
maintainer = "yanctab <yanctab@users.noreply.github.com>"
copyright = "2026, yanctab"
license-file = ["LICENSE", "0"]
extended-description = """\
shclap brings the power of clap-style argument parsing to shell scripts. \
Define your CLI interface via JSON configuration, and shclap validates \
arguments and outputs a sourceable file with environment variables."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/shclap", "usr/bin/", "755"],
    ["man/shclap.1", "usr/share/man/man1/", "644"],
]
